--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
           <nav>
               <!-- <a href="{{ site.baseurl }}/">Blog</a> -->
-            <a href="{{ site.baseurl }}/about">About&nbsp;&nbsp;&nbsp;</a>
+            <a href="{{ site.baseurl }}/about">About&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
           </nav>
         </header>
       </div>
